# VoidConnect

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  shell.nix
.cargo/: config.toml
Obsidian/: Void Connect.md  Безопасность сети.md  Внутренний DNS.md  Глобальная сеть.md  Обнаружение узлов.md  Система репутации.md  Структура проекта.md
Obsidian/функции/: Кастомизация аккаунта.md  Личный чат.md  Общее хранилище данных.md  Общий чат.md  Поднятие простых сайтов.md
app/: Cargo.toml
app/src/: main.rs
app/tests/: relay_dm_e2e.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  private_chat.rs  public_chat.rs
crates/core/: Cargo.toml
crates/core/src/: dns.rs  error.rs  identity.rs  lib.rs  manifest.rs  message.rs  peer.rs  profile.rs  site.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encrypt.rs  error.rs  hash.rs  identity.rs  keys.rs  keystore.rs  lib.rs  machine.rs  sign.rs  verify.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-169ead2609cfcc719b5597380d615e9b99d962a6f0bedfd7e35707c3989d21a3.json  query-1a49dd391541c3aa00ed21049b95c430434a6c31b688a6177bd36774139a0937.json  query-1d657eebdca078f104b472fca057b261e9c786f31d3d4af438a74ba4c6c83a08.json  query-20907f0821bccba04585e24ed2e3b9a859e537f66b1e67097d28c90a8659bf48.json  query-279c102683180d956015b422ad2ede23018953cd197a718377df9986d85506ad.json  query-2cadf1f6b0d111a65b3623332043f4c21a6d6b6542976335642e7746fd203563.json  query-2e3578475166da3c537d45dd0ef7fcb9370ca00b2b1a44f49fefd7fa3907f5de.json  query-3730509eb6c7abfe8b4d52a195aec9bbb6df184117f89a8de8cc4a27c9603e36.json  query-3e89e32bf185028009346875dba68106d6d3771b9ea073ea35e7b31cd34e20ab.json  query-4c1a1f2b89c715414da6cb121d010038f229b6eb475366c847d1bb2996dfba23.json  query-64f46f35866a49bd248a8934221d4de445f9d3b5bbdcc110ca78da839f1b884c.json  query-6a490d59b5bd108f461c78f6919d15b1d4be30a09d5518c83c8890e6b8e8d469.json  query-6d50f32d23d716e2276de03abecd69a8a220cf3a24d38d8d5b19e66cf992dc9a.json  query-809a9a9147503c0fb70dc4e8b4c51ec50ddf497e925611b5528dc7255879b0f5.json  query-88df0949ac13af1448e29d9a9dee2a34ece8039b1ace800bee69cbed6dd24702.json  query-8f8422df8caba8240ec7c8e352acc9c1f43a0574e3027cbbd811c5fdd1f07dbd.json  query-90294065a8f6c03f02b968e48137a801c619e9135c87385a5c5e53550717836b.json  query-98762c443f339bd4d9361cbd284dc34269fde0810450e69aa7683cea62c5eef2.json  query-9ad10f2fcf46bf7e911028ecf3b47850bbf71d7363f5e9c8db56abcf84c16dc0.json  query-9c057da43211875d7e0b5c908043e26bd8d33d2a9f04e316145eb6943d865e7a.json  query-9e543647131cea380ea9b62faf47f58c7c906ecda14544701aab9d2123a70b6b.json  query-9fca690254e66f5455c085229f1a926a42e4547b214cd7ffc9cdd678bc267dae.json  query-af0753f4dbbb34869a5b2fd74c1d262a0a658d29cad78759a81b84c1542a807b.json  query-bd47e5f7223be97f993e135b364444eb03191530f4a953e41fec6fb19fd6f4b8.json  query-c19fadc71d50e451d18c0ddf5f314bdbaf2f38e30448432f13f2d6bb2570f2a6.json  query-d009d5df6fb1b95d4030bcdad67bda8a43deeaf5e21645447854e53c796878ee.json  query-d1b482acf62116203851158021c38ae8f9086b41699f73d20b6f919cdf4a3b5b.json  query-dcd137a17e466848ecf2fb90cfe9ad1572aca3dbe91c3ef26ff6738ed0911c2c.json  query-ddc0626a12789c9341d30ce84e8d574c7d4102ca3bcfb5d7732475f4389a323e.json  query-e24fe7195b19f2ad9767d496a647a84f28a875224baef89091e62ad4fb8fc359.json  query-f02507c2912852932e19062279df0256b8c9cdbb4b09d088285e05ed4f1a918a.json  query-f3ea2724f65f9d08269cc8ccb000e825fe0dae3cf956c7d0fd263c25c3ca903b.json  query-f7a8a269f12ab19203adec05c23ad684c76f5d6b8aa3b22d9f1ae466c4e1ecb9.json
crates/db/migrations/: 0001_initial.sql  0002_chat_channels.sql  0003_votes.sql
crates/db/src/: chunks.rs  lib.rs  messages.rs  peers.rs  profiles.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: bootstrap.rs  error.rs  lib.rs  local_discovery.rs  mdns.rs  nat.rs  peer_list.rs  relay.rs  stun.rs  udp_broadcast.rs
crates/network/: Cargo.toml
crates/network/src/: conn_guard.rs  connection.rs  error.rs  lib.rs  rate_limit.rs  router.rs  transport.rs
crates/reputation/: Cargo.toml
crates/reputation/src/: error.rs  events.rs  lib.rs  reports.rs  score.rs  sync.rs
crates/storage/: Cargo.toml
crates/storage/src/: chunk_store.rs  chunker.rs  error.rs  events.rs  index.rs  integrity.rs  lib.rs  manager.rs  transfer.rs
crates/vote/: Cargo.toml
crates/vote/src/: error.rs  lib.rs  store.rs  sync.rs  tally.rs  types.rs
crates/web/: Cargo.toml
crates/web/src/: dns.rs  error.rs  lib.rs  registry.rs  server.rs
ui/: Cargo.toml
ui/src/: app.rs  avatar.rs  backend.rs  boot.rs  device_lock.rs  main.rs  private_store.rs  profile_store.rs  settings_store.rs  sys_open.rs  verify_store.rs  vote_service.rs
ui/src/pages/: chat.rs  graph.rs  mod.rs  private.rs  profile.rs  sites.rs  storage.rs  votes.rs
ui/src/widgets/: mod.rs  peer_list.rs  peer_popup.rs  reputation.rs  status_bar.rs
