[workspace]
members = [
    "crates/core",
    "crates/crypto",
    "crates/db",
    "crates/discovery",
    "crates/network",
    "crates/chat",
    "crates/storage",
    "crates/web",
    "crates/reputation",
    "app",
    "ui"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
mdns-sd = "0.10"

# Crypto
sodiumoxide = "0.2"
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

# Web server
axum = "0.7"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
rand = "0.8"

#egui
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }