[package]
name = "void-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "void-connect"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
chrono = { workspace = true }

void-core      = { path = "../crates/core" }
void-crypto    = { path = "../crates/crypto" }
void-discovery = { path = "../crates/discovery" }
void-chat      = { path = "../crates/chat" }
void-db        = { path = "../crates/db" }
void-storage   = { path = "../crates/storage" }
void-reputation = { path = "../crates/reputation" }
void-web       = { path = "../crates/web" }

tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
hex                = { workspace = true }
# Нативные диалоги выбора файлов (xdg-portal backend — без GTK-зависимостей сборки).
rfd                = "0.14"
# Декодирование/масштабирование аватарок (в PNG 64×64 для рассылки).
image              = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64             = "0.22"
