[package]
name = "void-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
void-core      = { path = "../core" }
void-crypto    = { path = "../crypto" }
void-discovery = { path = "../discovery" }
hex = { workspace = true }

chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }