[package]
name = "void-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# Шифрование и подписи
ed25519-dalek = { workspace = true }
x25519-dalek   = { workspace = true }
sha2           = { workspace = true }
hmac           = { workspace = true }
blake3         = { workspace = true }

# Генерация случайных чисел
rand           = { workspace = true }
rand_core      = { workspace = true }

# Сериализация
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }
base64         = { workspace = true }

# Системная информация (MAC, hostname)
mac_address    = { workspace = true }
gethostname    = { workspace = true }

# Ошибки
thiserror      = { workspace = true }

# Zeroize — обнуление секретов в памяти после использования
zeroize        = { workspace = true }
